// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nature-ui/button Button rernders correctly 1`] = `
<DocumentFragment>
  <button
    class="css-15pri0z-Button focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 px-4"
  />
</DocumentFragment>
`;

exports[`@nature-ui/button shows spinner and loading text if isLoading and loadingText 1`] = `
<DocumentFragment>
  <button
    class="css-15pri0z-Button focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 opacity-50 cursor-not-allowed px-4"
    data-loading=""
    disabled=""
  >
    <span
      class="align-middle relative"
    >
      <span
        class="css-hxvqwd animation-1nvx475 inline-block overflow-hidden border-t-2 align-middle w-4 h-4 text-currentColor"
        style="border-top: 2px solid currentColor; border-left: 2px solid currentColor;"
      >
        <span
          class="css-iaws77-VisuallyHidden"
        >
          Loading...
        </span>
      </span>
      <span
        class="ml-2"
      >
        Submitting
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`@nature-ui/button shows spinner if isLoading 1`] = `
<DocumentFragment>
  <button
    class="css-15pri0z-Button focus:shadow-outline focus:outline-none rounded font-semibold relative overflow-hidden align-middle inline-flex justify-center items-center leading-normal bg-gray-200 text-gray-700 hover:bg-gray-300 opacity-50 cursor-not-allowed px-4"
    data-loading=""
    disabled=""
  >
    <span
      class="align-middle absolute"
    >
      <span
        class="css-hxvqwd animation-1nvx475 inline-block overflow-hidden border-t-2 align-middle w-4 h-4 text-currentColor"
        style="border-top: 2px solid currentColor; border-left: 2px solid currentColor;"
      >
        <span
          class="css-iaws77-VisuallyHidden"
        >
          Loading...
        </span>
      </span>
    </span>
    <span
      class="opacity-0"
    >
      Email
    </span>
  </button>
</DocumentFragment>
`;
